@@ -53,6 +53,9 @@ instead of raising an exception.
 \fun{void}{checkbnr}{GEN bnr} Raise an exception if the argument
 is not a \var{bnr} structure.
 
+\fun{GEN}{checkbnr_i}{GEN bnr} same as \kbd{checkbnr} but returns the
+\var{bnr} or \kbd{NULL} instead of raising an exception.
+
 \fun{GEN}{checknf_i}{GEN nf} same as \kbd{checknf} but return \kbd{NULL}
 instead of raising an exception.
 
