@@ -2,19 +2,20 @@ Function: subgrouplist
 Section: number_fields
 C-Name: subgrouplist0
 Prototype: GDGD0,L,
-Help: subgrouplist(bnr,{bound},{flag=0}): bnr being as output by bnrinit or
- a list of cyclic components of a finite Abelian group G, outputs the list of
- subgroups of G (of index bounded by bound, if not omitted), given as HNF
- left divisors of the SNF matrix corresponding to G. If flag=0 (default) and
- bnr is as output by bnrinit, gives only the subgroups for which the modulus
- is the conductor.
-Doc: \var{bnr} being as output by \kbd{bnrinit} or a list of cyclic components
- of a finite Abelian group $G$, outputs the list of subgroups of $G$. Subgroups
- are given as HNF left divisors of the SNF matrix corresponding to $G$.
+Help: subgrouplist(cyc,{bound},{flag=0}): cyc being any object which has a
+ '.cyc' method giving the cyclic components for a finite Abelian group G,
+ outputs the list of subgroups of G (of index bounded by bound,
+ if not omitted), given as HNF left divisors of the SNF matrix corresponding
+ to G. If flag=0 (default) and 'cyc' is a bnr struture output by bnrinit,
+ gives only the subgroups for which the modulus is the conductor.
+Doc: \var{cyc} being a vector of positive integers giving the cyclic
+ components for a finite Abelian group $G$ (or any object which has a
+ \kbd{.cyc} method), outputs the list of subgroups of $G$. Subgroups are
+ given as HNF left divisors of the SNF matrix corresponding to $G$.
 
- If $\fl=0$ (default) and \var{bnr} is as output by \kbd{bnrinit}, gives
- only the subgroups whose modulus is the conductor. Otherwise, the modulus is
- not taken into account.
+ If $\fl=0$ (default) and \var{cyc} is a \var{bnr} structure output by
+ \kbd{bnrinit}, gives only the subgroups whose modulus is the conductor.
+ Otherwise, all subgroups are given.
 
  If \var{bound} is present, and is a positive integer, restrict the output to
  subgroups of index less than \var{bound}. If \var{bound} is a vector
