@@ -2112,6 +2112,7 @@ GEN     checkbid_i(GEN bid);
 GEN     checkbnf(GEN bnf);
 GEN     checkbnf_i(GEN bnf);
 void    checkbnr(GEN bnr);
+GEN     checkbnr_i(GEN bnr);
 void    checkbnrgen(GEN bnr);
 void    checkabgrp(GEN v);
 void    checksqmat(GEN x, long N);
